--- a/app/assets/stylesheets/todolist.scss
+++ b/app/assets/stylesheets/todolist.scss
@@ -17,18 +17,30 @@
 nav{
 	ul{
 		padding: 0;
-		
+
 		li{
-			width: 100px;
-			background-color: gray;
+			background-color: #DDDDDD;
 			display: inline;
 			text-align: center;
-			border: 5px #0066FF solid;
+			box-shadow: 3px  3px #888888;
 			border-radius: 5px;
+			width: 100px;
 			a{
+				padding-right: 20px;
+				padding-top: 10px;
+				padding-bottom: 10px;
+				padding-left: 20px;
 				text-decoration: none;
-			}
+			}			
 		}
+		li.active{
+			background-color: #AAAAAA;
+			box-shadow: 3px  3px #888888 inset;
+		}
+		li:hover{
+			background-color: #AAAAAA;
+			box-shadow: 3px  3px #888888 inset;
+		}		
 	}
 }
 
