--- a/app/views/todolist/index.html.erb
+++ b/app/views/todolist/index.html.erb
@@ -1,8 +1,8 @@
-<h1> ToDoList Index</h1>
+<h1>待辦事項列表</h1>
 <%=form_tag("todolist",method:"post") do %>
 <div class="NewToDo">
-	Content <%= text_field_tag :content %>
-	<%= submit_tag "New" %>
+	內容 <%= text_field_tag :content  %>
+	<%= submit_tag "新增" %>
 </div>
 <% end %>
 <hr>
@@ -23,28 +23,28 @@
 	end
 	%>
 	<ul>
-		<li class=<%=a_class%>><%=link_to "All",{action: "index"}%></li>
-		<li class=<%=w_class%>><%=link_to "Wait",{action: "index",status: "Wait"}%></li>
-		<li class=<%=c_class%>><%=link_to "Complete",{action: "index",status: "Complete"}%></li>
+		<li class=<%=a_class%>><%=link_to "全部",{action: "index"}%></li>
+		<li class=<%=w_class%>><%=link_to "待辦",{action: "index",status: "Wait"}%></li>
+		<li class=<%=c_class%>><%=link_to "完成",{action: "index",status: "Complete"}%></li>
 	</ul>
 </nav>
 <div class="content">
 	<table >
 
 		<tr>
-			<th class="cTitle">Content</th>
-			<th class="cStatus">Status</th>
-			<th class="cMange">Option</th>
+			<th class="cTitle">內容</th>
+			<th class="cStatus">狀態</th>
+			<th class="cMange">選項</th>
 		</tr>
 		<% @List.each do |item| %>
 		<%
 			status = item.status
 			if status ==  "complete"
-				btn_name = "Complete"
+				btn_name = "完成"
 				btn_class = "Complete"
 				content_class = "Complete"
 			else
-				btn_name = "Wait"
+				btn_name = "待辦"
 				btn_class = "Wait"
 				content_class = "Wait"
 			end
@@ -55,8 +55,8 @@
 			<%=button_to btn_name,{ action: "iscomplete", id: item.id},class: btn_class %>
 		</td>
 		<td style="text-align:center">
-			<%=button_to "Edit",{ action: "edit",id: item.id },method: :get %>
-			<%=button_to "Delete",{action: "destroy",id: item.id},method: :delete %>
+			<%=button_to "編輯",{ action: "edit",id: item.id },method: :get %>
+			<%=button_to "刪除",{action: "destroy",id: item.id},method: :delete %>
 		</td>
 		</tr>
 		<% end %>
